fix: can't compile in jdk17